split into sections for better automation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Laurent Renard",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
