--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.0",
+    "angular-smart-table": "~1.4.0",
+    "angular-bootstrap": "~0.11.2",
+    "bootstrap": "~3.2.0"
+  }
 }
