--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "angular-smart-table": "~1.4.0",
     "angular-bootstrap": "~0.11.2",
     "bootstrap": "~3.2.0"
+  },
+  "resolutions": {
+    "angular-smart-table": "~2.0.0"
   }
 }
