--- a/bower.json
+++ b/bower.json
@@ -22,12 +22,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.0",
-    "angular-smart-table": "~1.4.0",
-    "angular-bootstrap": "~0.11.2",
+    "angular": "^1.3.0",
+    "angular-smart-table": "^2.0.0",
+    "angular-bootstrap": "^0.11.2",
     "bootstrap": "~3.2.0"
-  },
-  "resolutions": {
-    "angular-smart-table": "~2.0.1"
   }
 }
